--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ enableGitInfo = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Chongqing University of Posts and Telecomunications", url = "https://www.cqupt.edu.cn/" } ]
+  organizations = [ { name = "Chongqing University of Posts and Telecomunications", url = "http://www.cqupt.edu.cn/" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
